# NewsSearch

./: .env.defaults  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
newssearch/: main.py  manage.py
newssearch/cli/news_cli/: main.py  news_cli.py  utils.py
newssearch/config/: __init__.py  settings.py
newssearch/infrastructure/clients/news/: enums.py  exceptions.py  news_client.py  news_client_sync.py  schemas.py
newssearch/infrastructure/transport/: aiohttp_transport.py  base.py  base_transport.py  exceptions.py  requests_transport.py  schemas.py  utils.py
newssearch/monitoring/prometheus/: base.py
newssearch/router/: __init__.py  healthcheck.py
newssearch/router/public/: views.py
newssearch/tasks/news_etl/: base.py  enums.py  news_etl.py  news_etl_sync.py  schemas.py  utils.py
newssearch/tasks/news_etl/utils/: record_factory.py  utils.py
newssearch/tests/api/: conftest.py  test_healthcheck.py
newssearch/tests/cli/: test_news_cli_utils_get_files_for_download.py  test_news_cli_utils_parse_id_range.py
newssearch/tests/infrastructure/: conftest.py
newssearch/tests/infrastructure/news_client/: conftest.py  test_news_client.py  test_paths_file.py  test_schemas.py  test_warc_file.py  testdata.py
newssearch/tests/infrastructure/transport/: conftest.py  test_transport.py  test_transport_request.py  test_transport_stream.py
newssearch/tests/tasks/news_etl/: conftest.py  dummy_helpers.py  test_etl_transform_warc.py  test_process_file.py  test_record_factory.py  test_run.py  test_utils.py  testdata.py
prometheus/: prometheus.yml
(+9 files in other folders)
